--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -16,7 +16,7 @@
 }
 
 %titulos{
-    background-image: url(../../img/imagenfondo.webp);
+    background-image: url(../img/imagenfondo.webp);
     background-size: cover;
     padding-top: 15rem;
     padding-bottom: 9rem;
