--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     padding: 5rem;
-    background-image: url(../../img/imagenfooter.webp);
+    background-image: url(../img/imagenfooter.webp);
     div{
         display: flex;
         justify-content: space-evenly;
