--- a/scss/base/_fuentes.scss
+++ b/scss/base/_fuentes.scss
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'poppins';
-    src: url(../../font/poppins.ttf);
+    src: url(../font/poppins.ttf);
 }
 @font-face {
     font-family: 'alkatra';
-    src: url(../../font/alkatra.ttf);
+    src: url(../font/alkatra.ttf);
 }
 @font-face {
     font-family: 'nunito';
-    src: url(../../font/nunito.ttf);
+    src: url(../font/nunito.ttf);
 }
