--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@
   font-family: "nunito";
   src: url(../font/nunito.ttf);
 }
-.cardDestacado .btnCard, section .btnMail a, .contenedorProducto .listaCompra ul li button, .crearCuenta button, section form button, .tarjetaProductos .buttonAgregar, .tarjetaProductos .buttonResultado, .btnDerecha {
+.cardDestacado .btnCard, main section .btnMail a, .contenedorProducto .listaCompra ul li button, .crearCuenta button, section form button, .tarjetaProductos .buttonAgregar, .tarjetaProductos .buttonResultado, .btnDerecha {
   background-color: #BDB2FF;
   padding: 1rem;
   border: solid 1px transparent;
   border-radius: 1rem;
 }
-.cardDestacado .btnCard:hover, section .btnMail a:hover, .contenedorProducto .listaCompra ul li button:hover, .crearCuenta button:hover, section form button:hover, .tarjetaProductos .buttonAgregar:hover, .tarjetaProductos .buttonResultado:hover, .btnDerecha:hover {
+.cardDestacado .btnCard:hover, main section .btnMail a:hover, .contenedorProducto .listaCompra ul li button:hover, .crearCuenta button:hover, section form button:hover, .tarjetaProductos .buttonAgregar:hover, .tarjetaProductos .buttonResultado:hover, .btnDerecha:hover {
   background-color: #FFC6FF;
   border: solid 1px lightyellow;
 }
@@ -468,15 +468,18 @@ header .navResponsive .navbar div input {
   background-image: linear-gradient(45deg, hsl(249, 100%, 85%) 5%, hsl(259, 100%, 86%) 20%, hsl(269, 100%, 86%) 26%, hsl(279, 100%, 87%) 29%, hsl(289, 100%, 88%) 33%, hsl(300, 100%, 89%) 36%, hsl(325, 100%, 89%) 40%, hsl(1, 100%, 90%) 45%, hsl(30, 100%, 86%) 52%, hsl(47, 100%, 84%) 62%, hsl(61, 100%, 86%) 90%);
 }
 
-section {
+main {
+  overflow-x: hidden;
+}
+main section {
   padding-top: 8rem;
 }
 @media (max-width: 992px) {
-  section {
+  main section {
     padding-top: 10rem;
   }
 }
-section h3 {
+main section h3 {
   text-align: center;
   font-size: 3rem;
   font-family: "nunito";
@@ -485,24 +488,24 @@ section h3 {
   margin-bottom: 10rem;
 }
 @media (max-width: 576px) {
-  section h3 {
+  main section h3 {
     font-size: 2rem;
     margin-bottom: 5rem;
   }
 }
-section article {
+main section article {
   margin-bottom: 4rem;
 }
-section article h4 {
+main section article h4 {
   margin-bottom: 5rem;
   margin-top: 2rem;
 }
-section .btnMail a {
+main section .btnMail a {
   border-radius: 1rem;
   padding: 1.5rem;
   border: solid 2px transparent;
 }
-section .btnMail a:hover {
+main section .btnMail a:hover {
   border-top: solid #FDFFB6 2px;
   border-right: solid #FDFFB6 2px;
 }
