--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,9 @@ main section article h4 {
   margin-bottom: 5rem;
   margin-top: 2rem;
 }
+main section article p {
+  font-weight: 500;
+}
 main section .btnMail a {
   border-radius: 1rem;
   padding: 1.5rem;
