--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -40,6 +40,9 @@ main{
                 margin-bottom: 5rem;
                 margin-top: 2rem;
             }
+            p{
+                font-weight: 500;
+            }
         }
         .btnMail{
             a{
