--- a/scss/componentes/_titulos.scss
+++ b/scss/componentes/_titulos.scss
@@ -58,7 +58,7 @@
     }
 }
 .btnDerecha{
-    @extend %btn-gral;   
+    @extend %btn-comprar;   
     border-radius: 0rem;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
