--- a/scss/componentes/_remera.scss
+++ b/scss/componentes/_remera.scss
@@ -29,7 +29,7 @@
                     }
                 }
                 button{
-                    @extend %btn-gral;
+                    @extend %btn-comprar;
                     padding: 0.5rem 2rem 0.5rem 2rem;
                 }
             }
