--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -1,7 +1,8 @@
 $colores: 
 #FDFFB6,
 #BDB2FF,
-#FFC6FF;
+#FFC6FF,
+white;
 
 $ft-color: 
 white, 
@@ -11,18 +12,3 @@ $ft-family:
 'poppins',
 'alkatra', 
 'nunito';
-
-$ft-size: 
-1rem,
-2rem,
-3rem,
-4rem,
-5rem;
-
-$border-r: 
-1rem,
-2rem,
-3rem,
-4rem,
-5rem, 
-0rem;
