--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -3,14 +3,16 @@
     padding: 1rem;
     border: solid 1px transparent;
     border-radius: 1rem;
+    transition: 0.3s;
     &:hover{
         background-color: nth($colores, 3);
+        transform: scale(1.1);
     }
 }
 
 %borde-gris{
     box-shadow: 0px 0px 35px gray;
-    border-radius: 1rem;
+    border-radius: 0.7rem;
 }
 
 %titulos{
@@ -57,7 +59,7 @@
         top: 0;
         width: 0;
         height: 100%;
-        background-color: #BDB2FF;
+        background-color: nth($colores, 2);
         transform: skewX(45deg);
         z-index: -1;
         transition: width 0.7s;       
