--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -7,7 +7,7 @@
         justify-content: space-between;
         font-family: nth($ft-family, 3);
         font-weight: bolder;
-        background-color: white;
+        background-color: $bg-tarjetas;
         padding: 1rem 4rem 1rem 2rem;
         ul{
             @include disposicion(flex, column, space-around, start);
