--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -27,7 +27,7 @@ header{
                         
                     }
                     input{
-                    border-radius: nth($border-r, 2);
+                    border-radius: 2rem;
                     font-family: nth($ft-family, 2);
                     outline: none;
                     }
@@ -69,7 +69,7 @@ header{
                     padding-right: 5rem;
                     font-family: $ft-titulos;
                     color: $color-titulos;
-                    font-size: nth($ft-size, 2);
+                    font-size: 2rem;
                     text-decoration: none;                   
                     @media (max-width: 576px) {
                         padding-right: 1rem;
@@ -79,7 +79,7 @@ header{
                     }
                 }
                 input{
-                    border-radius: nth($border-r, 3);
+                    border-radius: 3rem;
                     outline: none;
                     font-family: nth($ft-family, 2);
                     
