--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -24,10 +24,9 @@ main{
         }
         h3{
             text-align: center;
-            font-size: nth($ft-size, 3);
+            font-size: 3rem;
             font-family: nth($ft-family, 3);
             font-weight: bolder;
-            text-decoration: dotted;
             margin-bottom: 10rem;
             @media (max-width: 576px) {
                 font-size: 2rem;
@@ -42,6 +41,7 @@ main{
             h4{
                 margin-bottom: 5rem;
                 margin-top: 2rem;
+                align-self: flex-start;
             }
             p{
                 font-weight: 500;
@@ -61,11 +61,14 @@ h5{
     font-size: map-get($destacados, size);
     margin-top: map-get($destacados, top);
     margin-left: map-get($destacados, left);
+    @media (max-width: 576px){
+        margin-left: 1rem;
+    }
 }
 
 .cardDestacado{
     @include disposicion(flex, column, space-evenly, center);
-    background-color: white;
+    background-color: $bg-tarjetas;
     font-family: nth($ft-family, 3);
     font-weight: bold;
     padding: 1rem;
@@ -76,10 +79,10 @@ h5{
     a{
        @include prop-texto(center, none); 
        font-size: 1.5rem;
-       color: black;
+       color: nth($ft-color, 2);
     }
     .btnCard{
-        @extend %btn-diagonal;
+        @extend %btn-comprar;
         padding: 0.5rem;
         border-radius: 0.5rem;
         a{
